force-app/main/default/objects/Dan360_ProductoDeRemito__c/Dan360_ProductoDeRemito__c.object-meta.xml
<CustomObject>
    <description>Objeto que contiene los productos asociados a un remito.</description>
    <label>Producto de remito</label>
    <nameField>
        <displayFormat>PrdXRem-{0000}</displayFormat>
        <label>Nombre de Producto de remito</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Productos de remito</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>