force-app/main/default/objects/Dan360_ProductoDeRemito__c/fields/Dan360_BaseDeliveryQty__c.field-meta.xml
<CustomField>
    <fullName>Dan360_BaseDeliveryQty__c</fullName>
    <label>Base Delivery Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>