force-app/main/default/objects/Dan360_ProductoDeRemito__c/fields/Dan360_BatchBBDYYYYMMDD__c.field-meta.xml
<CustomField>
    <fullName>Dan360_BatchBBDYYYYMMDD__c</fullName>
    <label>Batch (BBD YYYY.MM.DD)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>