force-app/main/default/objects/Dan360_ProductoDeRemito__c/fields/Dan360_CantidadProducto__c.field-meta.xml
<CustomField>
    <fullName>Dan360_CantidadProducto__c</fullName>
    <description>Cantidad de producto en el remito</description>
    <label>Cantidad de producto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>