force-app/main/default/objects/Dan360_ProductoDeRemito__c/fields/Dan360_CodigoDeProducto__c.field-meta.xml
<CustomField>
    <fullName>Dan360_CodigoDeProducto__c</fullName>
    <formula>Dan360_Producto__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código de producto</label>
    <type>Text</type>
</CustomField>