force-app/main/default/objects/Dan360_ProductoDeRemito__c/fields/Dan360_ExpiryDateDDMMYYYY__c.field-meta.xml
<CustomField>
    <fullName>Dan360_ExpiryDateDDMMYYYY__c</fullName>
    <label>Expiry date (DD.MM.YYYY)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>