force-app/main/default/objects/Dan360_ProductoDeRemito__c/fields/Dan360_ItemNumber__c.field-meta.xml
<CustomField>
    <fullName>Dan360_ItemNumber__c</fullName>
    <label>Item Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>