force-app/main/default/objects/Dan360_ProductoDeRemito__c/fields/Dan360_MaterialNumber__c.field-meta.xml
<CustomField>
    <fullName>Dan360_MaterialNumber__c</fullName>
    <label>Material Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>