force-app/main/default/objects/Dan360_ProductoDeRemito__c/fields/Dan360_PositionInSaleOrders__c.field-meta.xml
<CustomField>
    <fullName>Dan360_PositionInSaleOrders__c</fullName>
    <label>Position in sale orders</label>
    <length>255</length>
    <type>Text</type>
</CustomField>