force-app/main/default/objects/Dan360_ProductoDeRemito__c/fields/Dan360_Producto__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Producto asociado al remito.</description>
    <label>Producto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Productos de remito</relationshipLabel>
    <relationshipName>Productos_de_remito</relationshipName>
    <type>Lookup</type>
</CustomField>