force-app/main/default/objects/Dan360_ProductoDeRemito__c/fields/Dan360_Remito__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Remito__c</fullName>
    <description>Remito al que se asocia el producto.</description>
    <label>Remito</label>
    <referenceTo>Dan360_Remito__c</referenceTo>
    <relationshipLabel>Productos de remito</relationshipLabel>
    <relationshipName>Productos_de_remito</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>