force-app/main/default/objects/Dan360_ProductoDeRemito__c/fields/Dan360_SalesDeliveryQty__c.field-meta.xml
<CustomField>
    <fullName>Dan360_SalesDeliveryQty__c</fullName>
    <label>Sales delivery Qty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>