force-app/main/default/objects/Dan360_ProductoDeRemito__c/fields/Dan360_SalesOrderNumberSALESFORCE__c.field-meta.xml
<CustomField>
    <fullName>Dan360_SalesOrderNumberSALESFORCE__c</fullName>
    <label>Sales Order Number SALESFORCE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>