force-app/main/default/objects/Dan360_ProductoDeRemito__c/fields/Dan360_SalesUoM__c.field-meta.xml
<CustomField>
    <fullName>Dan360_SalesUoM__c</fullName>
    <label>Sales UoM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>