force-app/main/default/objects/Dan360_ProductoDeRemito__c/fields/Dan360_SAPSalesOrder__c.field-meta.xml
<CustomField>
    <fullName>Dan360_SAPSalesOrder__c</fullName>
    <label>SAP Sales order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>