force-app/main/default/objects/Dan360_ProductoDeRemito__c/fields/ID_Externo__c.field-meta.xml
<CustomField>
    <fullName>ID_Externo__c</fullName>
    <description>Id Externo para actualizar o crear pedidos de remito. Formato : NumeroDelivery+Posicion.</description>
    <externalId>true</externalId>
    <label>ID Externo</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>